--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,2 +1,5 @@
-<h1>Articles#show</h1>
-<p>Find me in app/views/articles/show.html.erb</p>
+<h1>le Show des tâches</h1>
+
+<!-- Should display the task's details (content, date of creation, etc.) and a back-link to the index page. -->
+<h2><%= @article.title %></h2>
+<p><%= @articles.content %></p>
