--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,3 +1,9 @@
-<h1>Mes nouveaux articles</h1>
-<p>Find me in app/views/tasks/new.html.erb</p>
-<%= render "form" %>
+<h2>Mes nouveaux articles</h2>
+
+<div class="container">
+  <div class="row">
+    <div class="col-xs-10 col-xs-offset-1">
+      <%= render "form" %>
+    </div>
+  </div>
+</div>
